Перевое задание второго модуля(правки в футере)

--- a/source/index.html
+++ b/source/index.html
@@ -128,29 +128,19 @@
         <div class="socials">
           <ul class="socials__list">
             <li class="socials__list-item">
-              <a href="https://vk.com/htmlacademy" target="_blank" class="social-link">
-                <img class="socials__icon" src="img/footer/icon-vkontakte.svg" alt="HtmlAcademy vk">
-              </a>
+              <a href="https://vk.com/htmlacademy" target="_blank" class="social-link">HtmlAcademy vk</a>
             </li>
             <li class="socials__list-item">
-              <a href="https://www.instagram.com/htmlacademy/" target="_blank" class="social-link">
-                <img class="socials__icon" src="img/footer/icon-instagram.svg" alt="HtmlAcademy instagram">
-              </a>
+              <a href="https://www.instagram.com/htmlacademy/" target="_blank" class="social-link">HtmlAcademy instagram</a>
             </li>
             <li class="socials__list-item">
-              <a href="https://www.facebook.com/htmlacademy" target="_blank" class="social-link">
-                <img class="socials__icon" src="img/footer/icon-facebook.svg" alt="HtmlAcademy facebook">
-              </a>
+              <a href="https://www.facebook.com/htmlacademy" target="_blank" class="social-link">HtmlAcademy facebook</a>
             </li>
           </ul>
         </div>
         <div class="htmlacademy-logo">
-          <a href="https://htmlacademy.ru/" target="_blank" class="htmlacademy-logo__link">
-            <img class="htmlacademy-logo__words" src="img/footer/html-academy-words-logo.svg" alt="HtmlAcademy">
-          </a>
-          <a href="https://htmlacademy.ru/" target="_blank" class="htmlacademy-logo__link">
-            <img class="htmlacademy-logo__icon" src="img/footer/html-academy-logo.svg" alt="HtmlAcademy">
-          </a>
+          <a href="https://htmlacademy.ru/" target="_blank" class="htmlacademy-logo__link">HtmlAcademy</a>
+          <a href="https://htmlacademy.ru/" target="_blank" class="htmlacademy-logo__link">HtmlAcademy</a>
         </div>
       </footer>
     </div>
