Перевое задание второго модуля(правки полномасштабные)

--- a/source/index.html
+++ b/source/index.html
@@ -21,13 +21,13 @@
             <span class="visualyy-hidden">кнопка вызова меню</span>
           </button>
           <ul class="navigation__list">
-            <li class="navigation__list-item">
+            <li class="navigation__item">
               <a href="#" class="navigation__link">Главная</a>
             </li>
-            <li class="navigation__list-item">
+            <li class="navigation__item">
               <a href="#" class="navigation__link">Каталог продукции</a>
             </li>
-            <li class="navigation__list-item">
+            <li class="navigation__item">
               <a href="#" class="navigation__link">Подбор программы</a>
             </li>
           </ul>
@@ -60,25 +60,17 @@
         <section class="description">
           <h2 class="decription-title">Как это работает</h2>
           <ol class="description__list">
-            <li class="description__list-item">
-              <div class="description-reason">
-                <p class="description-reason__text">Функциональное питание содержит только полезные питательные вещества.</p>
-              </div>
+            <li class="description__item description__item--feed">
+                <p class="description__text">Функциональное питание содержит только полезные питательные вещества.</p>
             </li>
-            <li class="description__list-item">
-              <div class="description-reason">
+            <li class="description__item description__item--powder">
                 <p class="description__text">Выпускается в&nbsp;виде порошка, который нужно лишь залить кипятком и&nbsp;готово.</p>
-              </div>
             </li>
-            <li class="description__list-item">
-              <div class="description-reason">
+            <li class="description__item description__item--eating">
                 <p class="description__text">Замените один-два приема обычной еды на&nbsp;наше функциональное питание.</p>
-              </div>
             </li>
-            <li class="description__list-item">
-              <div class="description-reason">
+            <li class="description__item description__item--timer">
                 <p class="description__text">Уже через месяц наслаждайтесь изменениями к&nbsp;лучшему вашего питомца!</p>
-              </div>
             </li>
           </ol>
         </section>
@@ -86,15 +78,14 @@
           <h2 class="example__title">Живой пример</h2>
           <p class="example__text">Борис сбросил 5&nbsp;кг за&nbsp;2&nbsp;месяца, просто заменив свой обычный корм на&nbsp;Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он&nbsp;не&nbsp;менял своих привычек и&nbsp;по-прежнему спит по&nbsp;16&nbsp;часов в&nbsp;день.</p>
           <div class="example-facts">
-            <div class="example-facts__item">
-              <span class="example-facts__item-fact">5 кг</span>
-              <span class="example-facts__item-explanation">снижение веса</span>
-            </div>
-            <div class="example-facts__item">
-              <span class="example-facts__item-fact">60 дней</span>
-              <span class="example-facts__item-explanation">затрачено времени</span>
-            </div>
-            <p class="example__spending">Затраты на&nbsp;питание: 15&nbsp;000&nbsp;РУБ.</p>
+            <dl class="example-facts__item">
+              <dt class="example-facts__item-explanation">снижение веса</dt>
+              <dd class="example-facts__item-fact">5 кг</dd>
+              <dt class="example-facts__item-explanation">затрачено времени</dt>
+              <dd class="example-facts__item-fact">60 дней</dd>
+              <dt class="example__spending">Затраты на&nbsp;питание:</dt>
+              <dd class="example-facts__item-fact">15&nbsp;000&nbsp;РУБ.</dd>
+           </dl>
           </div>
           <div class="example__slider">
             <div class="slider-images">
@@ -127,19 +118,18 @@
         </div>
         <div class="socials">
           <ul class="socials__list">
-            <li class="socials__list-item">
+            <li class="socials__item">
               <a href="https://vk.com/htmlacademy" target="_blank" class="social-link">HtmlAcademy vk</a>
             </li>
-            <li class="socials__list-item">
+            <li class="socials__item">
               <a href="https://www.instagram.com/htmlacademy/" target="_blank" class="social-link">HtmlAcademy instagram</a>
             </li>
-            <li class="socials__list-item">
+            <li class="socials__item">
               <a href="https://www.facebook.com/htmlacademy" target="_blank" class="social-link">HtmlAcademy facebook</a>
             </li>
           </ul>
         </div>
         <div class="htmlacademy-logo">
-          <a href="https://htmlacademy.ru/" target="_blank" class="htmlacademy-logo__link">HtmlAcademy</a>
           <a href="https://htmlacademy.ru/" target="_blank" class="htmlacademy-logo__link">HtmlAcademy</a>
         </div>
       </footer>
