Перевое задание второго модуля(правки полномасштабные)

--- a/source/index.html
+++ b/source/index.html
@@ -58,7 +58,7 @@
           </div>
         </section>
         <section class="description">
-          <h2 class="decription-title">Как это работает</h2>
+          <h2 class="desription-title">Как это работает</h2>
           <ol class="description__list">
             <li class="description__item description__item--feed">
                 <p class="description__text">Функциональное питание содержит только полезные питательные вещества.</p>
