Перевое задание второго модуля(правки полномасштабные)

--- a/source/index.html
+++ b/source/index.html
@@ -60,16 +60,16 @@
         <section class="description">
           <h2 class="desription-title">Как это работает</h2>
           <ol class="description__list">
-            <li class="description__item description__item--feed">
+            <li class="description__item description__item-feed">
                 <p class="description__text">Функциональное питание содержит только полезные питательные вещества.</p>
             </li>
-            <li class="description__item description__item--powder">
+            <li class="description__item description__item-powder">
                 <p class="description__text">Выпускается в&nbsp;виде порошка, который нужно лишь залить кипятком и&nbsp;готово.</p>
             </li>
-            <li class="description__item description__item--eating">
+            <li class="description__item description__item-eating">
                 <p class="description__text">Замените один-два приема обычной еды на&nbsp;наше функциональное питание.</p>
             </li>
-            <li class="description__item description__item--timer">
+            <li class="description__item description__item-timer">
                 <p class="description__text">Уже через месяц наслаждайтесь изменениями к&nbsp;лучшему вашего питомца!</p>
             </li>
           </ol>
