github выдает ошибку

--- a/source/index.html
+++ b/source/index.html
@@ -129,9 +129,7 @@
             </li>
           </ul>
         </div>
-        <div class="htmlacademy-logo">
-          <a href="https://htmlacademy.ru/" target="_blank" class="htmlacademy-logo__link">HtmlAcademy</a>
-        </div>
+        <div class="htmlacademy-logo"><a href="https://htmlacademy.ru/" target="_blank" class="htmlacademy-logo__link">HtmlAcademy</a></div>
       </footer>
     </div>
   </body>
