чертов type_button

--- a/source/index.html
+++ b/source/index.html
@@ -17,7 +17,7 @@
           </a>
         </div>
         <nav class="navigation">
-          <button class="navigation__menu-button" hidden>
+          <button type="button" class="navigation__menu-button" hidden>
             <span class="visualyy-hidden">кнопка вызова меню</span>
           </button>
           <ul class="navigation__list">
