вторая часть ДЗ

--- a/source/index.html
+++ b/source/index.html
@@ -11,8 +11,6 @@
         <div class="logo-container">
           <a href="#" class="logo-link">
             <img src="img/header/logo-cat.svg" alt="" class="logo-img">
-          </a>
-          <a href="#" class="logo-link">
             <img src="img/header/logo-words.svg" alt="" class="logo-words">
           </a>
         </div>
@@ -22,13 +20,13 @@
           </button>
           <ul class="navigation__list">
             <li class="navigation__item">
-              <a href="#" class="navigation__link">Главная</a>
+              <a href="#" class="navigation__link navigation__link--current-page">Главная</a>
             </li>
             <li class="navigation__item">
-              <a href="#" class="navigation__link">Каталог продукции</a>
+              <a href="catalog.html" class="navigation__link">Каталог продукции</a>
             </li>
             <li class="navigation__item">
-              <a href="#" class="navigation__link">Подбор программы</a>
+              <a href="form.html" class="navigation__link">Подбор программы</a>
             </li>
           </ul>
         </nav>
@@ -85,7 +83,7 @@
               <dd class="example-facts__item-fact">60 дней</dd>
               <dt class="example__spending">Затраты на&nbsp;питание:</dt>
               <dd class="example-facts__item-fact">15&nbsp;000&nbsp;РУБ.</dd>
-           </dl>
+            </dl>
           </div>
           <div class="example__slider">
             <div class="slider-images">
@@ -116,18 +114,10 @@
             <img src="img/header/logo-words.svg" alt="" class="logo-words">
           </a>
         </div>
-        <div class="socials">
-          <ul class="socials__list">
-            <li class="socials__item">
-              <a href="https://vk.com/htmlacademy" target="_blank" class="social-link">HtmlAcademy vk</a>
-            </li>
-            <li class="socials__item">
-              <a href="https://www.instagram.com/htmlacademy/" target="_blank" class="social-link">HtmlAcademy instagram</a>
-            </li>
-            <li class="socials__item">
-              <a href="https://www.facebook.com/htmlacademy" target="_blank" class="social-link">HtmlAcademy facebook</a>
-            </li>
-          </ul>
+        <div class="social">
+          <a href="https://vk.com/htmlacademy" target="_blank" class="social-link">HtmlAcademy vk</a>
+          <a href="https://www.instagram.com/htmlacademy/" target="_blank" class="social-link">HtmlAcademy instagram</a>
+          <a href="https://www.facebook.com/htmlacademy" target="_blank" class="social-link">HtmlAcademy facebook</a>
         </div>
         <div class="htmlacademy-logo"><a href="https://htmlacademy.ru/" target="_blank" class="htmlacademy-logo__link">HtmlAcademy</a></div>
       </footer>
