--- a/source/catalog.html
+++ b/source/catalog.html
@@ -33,8 +33,8 @@
       </header>
       <main class="page__main">
         <h1 class="catalog-title">Каталог продукции</h1>
-        <section class="products">
-          <div class="product-card">
+        <ul class="products">
+          <li class="product-card">
             <ul class="product-card__list">
               <li class="product-card__item product-card__item-image">
                 <img src="img/catalog/chiken500.png" alt="Курица">
@@ -53,8 +53,8 @@
               </li>
             </ul>
             <a href="#" class="product-card__button">заказать</a>
-          </div>
-          <div class="product-card">
+          </li>
+          <li class="product-card">
             <ul class="product-card__list">
               <li class="product-card__item product-card__item-image">
                 <img src="img/catalog/fish1000.png" alt="Курица">
@@ -73,8 +73,8 @@
               </li>
             </ul>
             <a href="#" class="product-card__button">заказать</a>
-          </div>
-          <div class="product-card">
+          </li>
+          <li class="product-card">
             <ul class="product-card__list">
               <li class="product-card__item product-card__item-image">
                 <img src="img/catalog/fish500.png" alt="Рыба">
@@ -93,8 +93,8 @@
               </li>
             </ul>
             <a href="#" class="product-card__button">заказать</a>
-          </div>
-          <div class="product-card">
+          </li>
+          <li class="product-card">
             <ul class="product-card__list">
               <li class="product-card__item product-card__item-image">
                 <img src="img/catalog/fish1000.png" alt="Рыба">
@@ -113,8 +113,8 @@
               </li>
             </ul>
             <a href="#" class="product-card__button">заказать</a>
-          </div>
-          <div class="product-card">
+          </li>
+          <li class="product-card">
             <ul class="product-card__list">
               <li class="product-card__item product-card__item-image">
                 <img src="img/catalog/buckwheat500.png" alt="Гречка">
@@ -133,8 +133,8 @@
               </li>
             </ul>
             <a href="#" class="product-card__button">заказать</a>
-          </div>
-          <div class="product-card">
+          </li>
+          <li class="product-card">
             <ul class="product-card__list">
               <li class="product-card__item product-card__item-image">
                 <img src="img/catalog/buckwheat1000.png" alt="Гречка">
@@ -153,8 +153,8 @@
               </li>
             </ul>
             <a href="#" class="product-card__button">заказать</a>
-          </div>
-          <div class="product-card">
+          </li>
+          <li class="product-card">
             <ul class="product-card__list">
               <li class="product-card__item product-card__item-image">
                 <img src="img/catalog/rice500.png" alt="Рис">
@@ -173,13 +173,13 @@
               </li>
             </ul>
             <a href="#" class="product-card__button">заказать</a>
-          </div>
-          <div class="show-more">
+          </li>
+          <li class="show-more">
             <p>Показать еще 100500 товаров</p>
             <p>На&nbsp;самом деле вкусов гораздо больше!</p>
             <a href="#" class="show-more__button">показать все</a>
-          </div>
-        </section>
+          </li>
+        </ul>
         <section class="additional">
           <ul class="additional-products">
             <li class="product">
