product card title

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -36,6 +36,7 @@
         <ul class="products">
           <li class="product-card">
             <img src="img/catalog/chiken500.png" alt="Курица">
+            <span class="product-card__title">Cat Energy PRO 500&nbsp;г</span>
             <span class="product-card__item-name">Масса</span>
             <span class="product-card__item-value">500 г</span>
             <span class="product-card__item-name">Вкус</span>
@@ -46,6 +47,7 @@
           </li>
           <li class="product-card">
             <img src="img/catalog/fish1000.png" alt="Курица">
+            <span class="product-card__title">Cat Energy PRO 1000&nbsp;г</span>
             <span class="product-card__item-name">Масса</span>
             <span class="product-card__item-value">1000 г</span>
             <span class="product-card__item-name">Вкус</span>
@@ -56,6 +58,7 @@
           </li>
           <li class="product-card">
             <img src="img/catalog/fish500.png" alt="Рыба">
+            <span class="product-card__title">Cat Energy PRO 500&nbsp;г</span>
             <span class="product-card__item-name">Масса</span>
             <span class="product-card__item-value">500 г</span>
             <span class="product-card__item-name">Вкус</span>
@@ -66,6 +69,7 @@
           </li>
           <li class="product-card">
             <img src="img/catalog/fish1000.png" alt="Рыба">
+            <span class="product-card__title">Cat Energy PRO 1000&nbsp;г</span>
             <span class="product-card__item-name">Масса</span>
             <span class="product-card__item-value">1000 г</span>
             <span class="product-card__item-name">Вкус</span>
@@ -76,6 +80,7 @@
           </li>
           <li class="product-card">
             <img src="img/catalog/buckwheat500.png" alt="Гречка">
+            <span class="product-card__title">Cat Energy slim 500&nbsp;г</span>
             <span class="product-card__item-name">Масса</span>
             <span class="product-card__item-value">500 г</span>
             <span class="product-card__item-name">Вкус</span>
@@ -86,6 +91,7 @@
           </li>
           <li class="product-card">
             <img src="img/catalog/buckwheat1000.png" alt="Гречка">
+            <span class="product-card__title">Cat Energy slim 1000&nbsp;г</span>
             <span class="product-card__item-name">Масса</span>
             <span class="product-card__item-value">1000 г</span>
             <span class="product-card__item-name">Вкус</span>
@@ -96,6 +102,7 @@
           </li>
           <li class="product-card">
             <img src="img/catalog/rice500.png" alt="Рис">
+            <span class="product-card__title">Cat Energy slim 500&nbsp;г</span>
             <span class="product-card__item-name">Масса</span>
             <span class="product-card__item-value">500 г</span>
             <span class="product-card__item-name">Вкус</span>
