--- a/source/index.html
+++ b/source/index.html
@@ -15,8 +15,8 @@
     <section class="promo">
       <h2 class="promo__title">Функциональное питание для котов</h2>
       <p class="promo__text">Занялся собой? Займись котом!</p>
-      <div class="img-container">
-        <img src="img/promo/promo-chicken.png" alt="Корм для котов со вкусом курицы" class="promo__img">
+      <div class="image-container">
+        <img src="img/promo-chicken.png" alt="Корм для котов со вкусом курицы" class="promo__img">
       </div>
       <a href="#" class="promo__button button">Подобрать программу</a>
     </section>
@@ -33,7 +33,7 @@
       </div>
     </section>
     <section class="description">
-      <h2 class="desription-title">Как это работает</h2>
+      <h2 class="desription__title">Как это работает</h2>
       <ol class="description__list">
         <li class="description__item description__item-feed">
             <p class="description__text">Функциональное питание содержит только полезные питательные вещества.</p>
@@ -62,7 +62,7 @@
           <dd class="example-facts__item-fact">15&nbsp;000&nbsp;РУБ.</dd>
         </dl>
       </div>
-      <div class="example__slider">
+      <div class="example-slider">
         <div class="slider-images">
           <img src="img/cat-fat.png" alt="было" class="slider-images__was-image">
           <img src="img/cat-skinny.png" alt="стало" class="slider-images__now-image">
