--- a/source/catalog.html
+++ b/source/catalog.html
@@ -96,6 +96,7 @@
       </li>
     </ul>
     <section class="additional">
+      <h2 class="visually-hidden">дополнительные товары</h2>
       <ul class="additional-products">
         <li class="product">
           <span class="product__name">сахарозаменитель</span>
