--- a/source/form.html
+++ b/source/form.html
@@ -6,66 +6,69 @@
 {% include "head.njk" %}
 
 <body class="page__body">
-  {% include "header.njk" %}
+  <div class="page__centerer">
 
-  <main class="page-main">
-    <h1 class="page__form-title">Подбор программы</h1>
-    <p class="request-to-user">Заполните анкету, и&nbsp;мы&nbsp;подберем<br>программу питания для вашего кота</p>
-    <form action="https://echo.htmlacademy.ru" method="post" class="form-cat-program">
-      <fieldset class="inputs-group inputs-group-cat-parametrs">
-        <legend class="inputs-group__title-hidden visually-hidden">Имя, возраст, вес</legend>
-        <label class="inputs-group__input-label" for="catname">
-          Имя:*
-          <input class="inputs-group__input" id="catname" name="catname" type="text" required value="Барсик" placeholder="Введите значение">
-        </label>
-        <label class="inputs-group__input-label" for="weight">
-          Вес (кг):*
-          <input class="inputs-group__input" id="weight" name="weight" type="number" required value="7" placeholder="Введите значение">
-        </label>
-        <label class="inputs-group__input-label" for="age">
-          Возраст (лет):*
-          <input class="inputs-group__input" id="age" name="age" type="number" required value="7" placeholder="Введите значение">
-        </label>
-      </fieldset>
-      <fieldset class="inputs-group inputs-group-type-program">
-        <legend class="inputs-group__title-hidden visually-hidden">Тип программы</legend>
-        <input class="inputs-group__input-radio visually-hidden" id="slimming" name="program" value="slimming"  type="radio" checked>
-        <label class="inputs-group__input-label" for="slimming">похудение</label>
-        <input class="inputs-group__input-radio visually-hidden" id="weight-gain" name="program" value="weight-gain" type="radio">
-        <label class="inputs-group__input-label" for="weight-gain">Набор массы</label>
-        <input class="inputs-group__input-radio visually-hidden" id="not-decide" name="program"  value="not-decide" type="radio">
-        <label class="inputs-group__input-label" for="not-decide">Не знаю (Нужен ваш совет)</label>
-      </fieldset>
-      <fieldset class="inputs-group inputs-group-user-contacts">
-        <legend class="inputs-group__title">Контактные данные (владельца кота)</legend>
-        <label class="inputs-group__input-label" for="email">
-          E-mail:*
-          <input class="inputs-group__input" id="email" name="email" type="email" required value="kuklachev@gmail.com" placeholder="Введите ваш E-mail">
-        </label>
-        <label class="inputs-group__input-label" for="phone">
-          Телефон:*
-          <input class="inputs-group__input" id="phone" name="phone" type="tel" required value="8 (960) 900-60-90" placeholder="Введите номер вашего телефона">
-        </label>
-      </fieldset>
-      <label class="comment-label"><span class="comment-label__title">Комментарий</span><textarea class="form-cat-program__comment" name="comment" placeholder="Расскажите обо всех повадках кота"></textarea></label>
-      <fieldset class="inputs-group inputs-group-additionals">
-        <legend class="inputs-group__title">Дополнения</legend>
-        <input class="inputs-group__input-checkbox visually-hidden" id="sugar-substitiute" name="additionals" value="sugar-substitiute" type="checkbox" checked><label class="inputs-group__input-label" for="sugar-substitiute">сахарозаменитель</label>
-        <input class="inputs-group__input-checkbox visually-hidden" id="water" name="additionals" value="water" type="checkbox"><label class="inputs-group__input-label" for="water">питьевая вода</label>
-        <input class="inputs-group__input-checkbox visually-hidden" id="milk" name="additionals" value="milk" type="checkbox"><label class="inputs-group__input-label" for="milk">молоко</label>
-        <input class="inputs-group__input-checkbox visually-hidden" id="vitamins" name="additionals" value="vitamins" type="checkbox"><label class="inputs-group__input-label" for="vitamins">витамины</label>
-      </fieldset>
-      <button class="form-cat-program__button" type="submit">отправить заявку</button>
-      <p class="requireds-description">* — Обязательные поля</p>
-    </form>
-    <section class="contacts">
-      <h2 class="visually-hidden">Наш адрес</h2>
-      <p class="contacts__lead-text">приглашаем к&nbsp;сотрудничеству дилеров!</p>
-      <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-      <div class="contacts__map"></div>
-    </section>
-  </main>
+      {% include "header.njk" %}
 
-  {% include "footer.njk" %}
-  </body>
+      <main class="page-main">
+        <h1 class="page__form-title">Подбор программы</h1>
+        <p class="request-to-user">Заполните анкету, и&nbsp;мы&nbsp;подберем<br>программу питания для вашего кота</p>
+        <form action="https://echo.htmlacademy.ru" method="post" class="form-cat-program">
+          <fieldset class="inputs-group inputs-group-cat-parametrs">
+            <legend class="inputs-group__title-hidden visually-hidden">Имя, возраст, вес</legend>
+            <label class="inputs-group__input-label" for="catname">
+              Имя:*
+              <input class="inputs-group__input" id="catname" name="catname" type="text" required value="Барсик" placeholder="Введите значение">
+            </label>
+            <label class="inputs-group__input-label" for="weight">
+              Вес (кг):*
+              <input class="inputs-group__input" id="weight" name="weight" type="number" required value="7" placeholder="Введите значение">
+            </label>
+            <label class="inputs-group__input-label" for="age">
+              Возраст (лет):*
+              <input class="inputs-group__input" id="age" name="age" type="number" required value="7" placeholder="Введите значение">
+            </label>
+          </fieldset>
+          <fieldset class="inputs-group inputs-group-type-program">
+            <legend class="inputs-group__title-hidden visually-hidden">Тип программы</legend>
+            <input class="inputs-group__input-radio visually-hidden" id="slimming" name="program" value="slimming"  type="radio" checked>
+            <label class="inputs-group__input-label" for="slimming">похудение</label>
+            <input class="inputs-group__input-radio visually-hidden" id="weight-gain" name="program" value="weight-gain" type="radio">
+            <label class="inputs-group__input-label" for="weight-gain">Набор массы</label>
+            <input class="inputs-group__input-radio visually-hidden" id="not-decide" name="program"  value="not-decide" type="radio">
+            <label class="inputs-group__input-label" for="not-decide">Не знаю (Нужен ваш совет)</label>
+          </fieldset>
+          <fieldset class="inputs-group inputs-group-user-contacts">
+            <legend class="inputs-group__title">Контактные данные (владельца кота)</legend>
+            <label class="inputs-group__input-label" for="email">
+              E-mail:*
+              <input class="inputs-group__input" id="email" name="email" type="email" required value="kuklachev@gmail.com" placeholder="Введите ваш E-mail">
+            </label>
+            <label class="inputs-group__input-label" for="phone">
+              Телефон:*
+              <input class="inputs-group__input" id="phone" name="phone" type="tel" required value="8 (960) 900-60-90" placeholder="Введите номер вашего телефона">
+            </label>
+          </fieldset>
+          <label class="comment-label"><span class="comment-label__title">Комментарий</span><textarea class="form-cat-program__comment" name="comment" placeholder="Расскажите обо всех повадках кота"></textarea></label>
+          <fieldset class="inputs-group inputs-group-additionals">
+            <legend class="inputs-group__title">Дополнения</legend>
+            <input class="inputs-group__input-checkbox visually-hidden" id="sugar-substitiute" name="additionals" value="sugar-substitiute" type="checkbox" checked><label class="inputs-group__input-label" for="sugar-substitiute">сахарозаменитель</label>
+            <input class="inputs-group__input-checkbox visually-hidden" id="water" name="additionals" value="water" type="checkbox"><label class="inputs-group__input-label" for="water">питьевая вода</label>
+            <input class="inputs-group__input-checkbox visually-hidden" id="milk" name="additionals" value="milk" type="checkbox"><label class="inputs-group__input-label" for="milk">молоко</label>
+            <input class="inputs-group__input-checkbox visually-hidden" id="vitamins" name="additionals" value="vitamins" type="checkbox"><label class="inputs-group__input-label" for="vitamins">витамины</label>
+          </fieldset>
+          <button class="form-cat-program__button" type="submit">отправить заявку</button>
+          <p class="requireds-description">* — Обязательные поля</p>
+        </form>
+        <section class="contacts">
+          <h2 class="visually-hidden">Наш адрес</h2>
+          <p class="contacts__lead-text">приглашаем к&nbsp;сотрудничеству дилеров!</p>
+          <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+          <div class="contacts__map"></div>
+        </section>
+      </main>
+
+      {% include "footer.njk" %}
+    </div>
+</body>
 </html>
