--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
     <main class="page-main">
 
       <div class="background"></div>
-      <h1 class="page__title visually-hidden">
+      <h1 class="page__title-hidden visually-hidden">
         Cat energy
       </h1>
       <section class="promo">
