--- a/source/catalog.html
+++ b/source/catalog.html
@@ -145,9 +145,8 @@
     </div>
     {% include "./templates/contacts.twig" %}
   </main>
-
   {% include "./templates/footer.twig" %}
-
+  <script src="./js/menu-button.min.js"></script>
 </body>
 
 </html>
