--- a/source/form.html
+++ b/source/form.html
@@ -65,10 +65,8 @@
       </div>
       {% include "./templates/contacts.twig" %}
     </main>
-
-
   {% include "./templates/footer.twig" %}
-
+  <script src="./js/menu-button.min.js"></script>
 </body>
 
 </html>
