--- a/source/index.html
+++ b/source/index.html
@@ -98,21 +98,8 @@
     {% include "./templates/contacts.twig" %}
   </main>
   {% include "./templates/footer.twig" %}
-  <script>
-    var nav = document.querySelector('.navigation');
-    var navToggle = document.querySelector('.navigation__button');
-    nav.classList.remove('navigation--nojs');
 
-    nav.addEventListener('click', function() {
-    if (nav.classList.contains('navigation--closed')) {
-      nav.classList.remove('navigation--closed');
-      nav.classList.add('navigation--opened');
-    } else{
-      nav.classList.add('navigation--closed');
-      nav.classList.remove('navigation--opened');
-    }
-  });
-  </script>
+  <script src="./js/menu-button.min.js"></script>
 </body>
 
 </html>
